--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>CSS实现动态下划线</title>
-    <link href="main.css" rel="stylesheet" type="text/css" />
+    <link href="mian.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 	
